adicionando codigo imc

--- a/IMC.html
+++ b/IMC.html
@@ -14,7 +14,7 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">Calcular IMC</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -33,12 +33,12 @@
         <form action="">
         <div class="row g-3">
             <div class="col">
-                <label for="numero1"class='form-label'>Numero 1</label>
-              <input type="text" class="form-control" placeholder="Número 1" aria-label="Número 1" numero="numero1" id="numero1">
+                <label for="altura"class='form-label'>Altura</label>
+              <input type="text" class="form-control" placeholder="Digite sua Altura (M)" aria-label="Número 1" numero="numero1" id="altura">
             </div>
             <div class="col">
-                <label for="numero2"class='form-label'>Numero 2</label>
-              <input type="text" class="form-control" placeholder="Número 2" aria-label="Número 2" name="numero2" id="numero2">
+                <label for="peso"class='form-label'>Peso</label>
+              <input type="text" class="form-control" placeholder="Digite seu Peso (Kg)" aria-label="Número 2" name="numero2" id="peso">
             </div>
             <div class="col">
                 <label class='form-label'>Resultado
@@ -46,14 +46,14 @@
                 </label>
             </div>
           </div>
-          <button type="button" class="btn btn-primary" id="btnSomar">Calcular</button>
+          <button type="button" class="btn btn-primary" id="btnCalcular">Calcular</button>
 
         </form>
       </main>
       <footer>
 
       </footer>
-    <script src="js/calculo.js"></script>
+    <script src="js/imc.js"></script>
 </body>
 
 </html>
